# formal-containment

./: .envrc  .gitignore  .lefthook.yml  CLAUDE.md  flake.nix  license.org  readme.org
.cursor/rules/: mcppy.mdc  protocol.mdc
.github/workflows/: ci.yml
comms/: Makefile
comms/common/: fns.typ  refs.bib
comms/lesswrong/: post.org
comms/odyssey/: fns.typ  license.org  main.typ  readme.org
comms/odyssey/assets/: results_20250530-1551.toml  results_20250616-1747.toml  results_20250617-1438.toml  results_20250617-1655.toml  results_20250620-0029.toml
comms/talks/toronto/: template.typ
comms/trajectory_labs/: fns.typ  readme.org  refs.bib  template.typ
comms/trajectory_labs/assets/: experiments.toml
comms/whitepaper/: experiments.toml  main.typ  refs.bib  results.toml
containment/: .gitignore  README.md  pyproject.toml
containment/src/containment/: __init__.py  mcp_server.py
experiments/: data.toml  main.sh  test.sh
fcp/: README.md  pyproject.toml
fcp/src/containment/: __init__.py  __main__.py  artifacts.py  lake.py  loops.py  mcp_boundary_client.py  mcp_client.py  mcp_completion_client.py  mcp_server.py  oracles.py  parse_xml.py  prompts.py  protocol.py  structures.py  system_prompts.py  tools.py
fcp/src/containment/fsio/: __init__.py  artifacts.py  data.py  experiment.py  lake.py  logs.py  prompts.py  tools.py
fcp/src/containment/io/: experiment.py  lake.py
fcp/src/containment/mcp/: server.py
fcp/src/containment/mcp/clients/: basic.py  boundary.py  completion.py
fcp/src/containment/mcp/clients/experts/: imp.py  proof.py
fcp/src/containment/mcp/clients/experts/proof/: __init__.py  loop.py  readme.org  search.py
fcp/src/containment/netio/: __init__.py  completions.py  oracles.py
fcp/src/containment/parsing/: regex.py
fcp/src/containment/structures/: __init__.py  basic.py  cli_basic.py  mcp.py
fcp/src/containment/structures/enums/: __init__.py  data.py
fcp/src/tests/: conftest.py  test_mcp_server.py  test_prompt_loading.py  test_template_loading.py
fcp/src/tests/networked/: readme.org  test_imp_expert.py
imp/: .envrc  Artifacts.lean  Check.lean  Imp.lean  Main.lean  lake-manifest.json  lakefile.toml  lean-toolchain  readme.org
imp/Artifacts/: Basic.lean  Basic2.lean  NegativeTests.lean  PositiveTests.lean  readme.org
imp/Imp/: Hoare.lean
imp/Imp/Expr/: Basic.lean  Delab.lean  Eval.lean  Syntax.lean
imp/Imp/Hoare/: Basic.lean  Delab.lean  Rules.lean  Syntax.lean  Tactics.lean
txt/: Basic.lean.template  Negative.lean.template  Positive.lean.template  expert.system.prompt.template  imp.system.prompt  imp.user.prompt.template  proof.system.prompt  proof.user.continuous.prompt.template  proof.user.init.prompt.template
txt/loop/: Negative.lean.template  Positive.lean.template  proof.system.prompt  proof.user.prompt.template
txt/search/: Negative.lean.template  Positive.lean.template  proof.system.prompt  proof.user.prompt.template
whitepaper/: main.typ
(+1 files in other folders)
