[project]
name = "containment"
version = "0.1.0"
description = "Formal containment protocol"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@beneficialaifoundation.org" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "jinja2>=3.1.6",
    "logfire>=3.16.0",
    "mcp>=1.9.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "typer>=0.15.4",
]

[project.scripts]
mcp-server = "containment:mcp_server_run"
contain-test = "containment:test"
inspector = "containment:inspector"
contain = "containment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
