[project]
name = "containment"
version = "0.1.0"
description = "Formal containment protocol"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@beneficialaifoundation.org" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "litellm[proxy]==1.70.4",
    "mcp>=1.5.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tomli-w>=1.2.0",
    "typer>=0.15.4",
]

[project.scripts]
mcp-server = "containment:mcp_server_run"
contain = "containment:contain"
test-mcp = "containment:test"
test-nomcp = "containment:test_no_mcp"
inspector = "containment:inspector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "logfire>=3.16.0",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-exporter-otlp>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
testpaths = [
  "src/tests"
]