[project]
name = "containment"
version = "0.1.0"
description = "Formal containment protocol"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@beneficialaifoundation.org" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "litellm>=1.71.2",
    "mcp>=1.9.1",
    "pantograph",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tomli-w>=1.2.0",
    "typer>=0.15.4",
]

[project.scripts]
mcp-server = "containment:mcp_server_run"
contain = "containment:contain"
test-mcp = "containment:test"
inspector = "containment:inspector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "logfire>=3.16.0",
    "mypy>=1.16.0",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-exporter-otlp>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
testpaths = [
  "src/tests"
]

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }
